--- a/js/i18n/de.json
+++ b/js/i18n/de.json
@@ -69,6 +69,226 @@
             "projectedSavings": "Prognostizierte Ersparnisse bei Renteneintritt",
             "monthlyIncome": "Geschätztes Monatseinkommen",
             "savingsGap": "Sparlücke"
+        },
+        "loan": {
+            "title": "Kreditrückzahlungsrechner",
+            "description": "Sehen Sie, wie Sonderzahlungen Ihnen helfen können, Kredite schneller abzuzahlen.",
+            "loanBalance": "Aktueller Kreditsaldo",
+            "interestRate": "Zinssatz",
+            "monthlyPayment": "Monatliche Zahlung",
+            "extraPayment": "Zusätzliche monatliche Zahlung",
+            "payoffTime": "Zeit bis zur Rückzahlung",
+            "interestSaved": "Gesparte Zinsen",
+            "newPayoffDate": "Neues Rückzahlungsdatum"
+        },
+        "debtPayoff": {
+            "title": "Schuldenabbau-Planer",
+            "description": "Erstellen Sie einen Schuldenabbauplan mit der Schneeball- oder Lawinenmethode.",
+            "debtName": "Schuldenbezeichnung",
+            "balance": "Saldo",
+            "interestRate": "Zinssatz",
+            "minPayment": "Mindestzahlung",
+            "addDebt": "Schulden hinzufügen",
+            "extraPayment": "Zusätzliche monatliche Zahlung",
+            "method": "Rückzahlungsmethode",
+            "snowball": "Schneeball (Kleinster Saldo zuerst)",
+            "avalanche": "Lawine (Höchster Zinssatz zuerst)",
+            "totalDebt": "Gesamtschulden",
+            "debtFreeDate": "Schuldenfreies Datum",
+            "totalInterest": "Gesamtzinsen"
+        },
+        "autoLoan": {
+            "title": "Autokredit-Rechner",
+            "description": "Berechnen Sie Autokreditraten und Gesamtfinanzierungskosten.",
+            "vehiclePrice": "Fahrzeugpreis",
+            "downPayment": "Anzahlung",
+            "tradeInValue": "Inzahlungnahme-Wert",
+            "interestRate": "Zinssatz",
+            "loanTerm": "Kreditlaufzeit",
+            "monthlyPayment": "Monatliche Zahlung",
+            "totalInterest": "Gesamtzinsen",
+            "totalCost": "Gesamtkosten"
+        },
+        "studentLoan": {
+            "title": "Studienkredit-Rechner",
+            "description": "Planen Sie Ihre Studienkreditrückzahlung und erkunden Sie Erlassoptionen.",
+            "loanBalance": "Gesamtkreditsaldo",
+            "interestRate": "Durchschnittlicher Zinssatz",
+            "repaymentPlan": "Rückzahlungsplan",
+            "standard": "Standard (10 Jahre)",
+            "extended": "Verlängert (25 Jahre)",
+            "graduated": "Gestaffelt",
+            "incomedriven": "Einkommensabhängig",
+            "monthlyPayment": "Monatliche Zahlung",
+            "totalPaid": "Gesamtbetrag gezahlt",
+            "totalInterest": "Gesamtzinsen"
+        },
+        "401k": {
+            "title": "401(k)-Rechner",
+            "description": "Maximieren Sie Ihre 401(k)-Beiträge und Arbeitgeberzuschüsse.",
+            "currentAge": "Aktuelles Alter",
+            "retirementAge": "Rentenalter",
+            "annualSalary": "Jahresgehalt",
+            "contributionPercent": "Ihr Beitrag (%)",
+            "employerMatch": "Arbeitgeberzuschuss (%)",
+            "matchLimit": "Zuschussgrenze (%)",
+            "currentBalance": "Aktueller 401(k)-Saldo",
+            "expectedReturn": "Erwartete Jahresrendite",
+            "projectedBalance": "Prognostizierter Saldo bei Renteneintritt",
+            "yourContributions": "Ihre Gesamtbeiträge",
+            "employerContributions": "Arbeitgeberbeiträge",
+            "investmentGrowth": "Anlagewachstum"
+        },
+        "savingsGoal": {
+            "title": "Sparziel-Rechner",
+            "description": "Finden Sie heraus, wie viel Sie monatlich sparen müssen, um Ihr Ziel zu erreichen.",
+            "goalAmount": "Zielbetrag",
+            "currentSavings": "Aktuelle Ersparnisse",
+            "timeframe": "Zeitrahmen (Monate)",
+            "interestRate": "Zinssatz (APY)",
+            "monthlyNeeded": "Benötigte monatliche Sparrate",
+            "totalContributions": "Gesamtbeiträge",
+            "interestEarned": "Verdiente Zinsen"
+        },
+        "emergencyFund": {
+            "title": "Notfallfonds-Rechner",
+            "description": "Berechnen Sie, wie viel Sie in Ihrem Notfallfonds benötigen.",
+            "monthlyExpenses": "Monatliche Ausgaben",
+            "monthsCoverage": "Monate der Absicherung",
+            "currentSavings": "Aktuelle Notfallersparnisse",
+            "targetAmount": "Ziel-Notfallfonds",
+            "amountNeeded": "Noch benötigter Betrag",
+            "monthsToGoal": "Monate bis zum Ziel"
+        },
+        "inflation": {
+            "title": "Inflationsrechner",
+            "description": "Sehen Sie, wie die Inflation Ihre Kaufkraft im Laufe der Zeit beeinflusst.",
+            "currentAmount": "Aktueller Betrag",
+            "inflationRate": "Jährliche Inflationsrate",
+            "years": "Anzahl der Jahre",
+            "futureValue": "Zukünftiger Wert",
+            "purchasingPower": "Kaufkraft",
+            "totalInflation": "Gesamtinflation"
+        },
+        "salary": {
+            "title": "Gehaltsrechner",
+            "description": "Umrechnung zwischen Stunden-, Wochen-, Monats- und Jahresgehalt.",
+            "amount": "Betrag",
+            "period": "Zahlungszeitraum",
+            "hourly": "Stündlich",
+            "weekly": "Wöchentlich",
+            "biweekly": "Zweiwöchentlich",
+            "monthly": "Monatlich",
+            "annual": "Jährlich",
+            "hoursPerWeek": "Stunden pro Woche",
+            "weeksPerYear": "Wochen pro Jahr"
+        },
+        "takeHomePay": {
+            "title": "Nettogehaltsrechner",
+            "description": "Berechnen Sie Ihr Nettogehalt nach Steuern und Abzügen.",
+            "grossSalary": "Bruttojahresgehalt",
+            "payFrequency": "Zahlungsfrequenz",
+            "filingStatus": "Steuerstatus",
+            "single": "Ledig",
+            "married": "Verheiratet gemeinsam veranlagt",
+            "head": "Haushaltsvorstand",
+            "state": "Bundesland",
+            "deductions": "Vorsteuerabzüge",
+            "netPay": "Nettogehalt",
+            "federalTax": "Bundessteuer",
+            "stateTax": "Landessteuer",
+            "socialSecurity": "Sozialversicherung",
+            "medicare": "Krankenversicherung"
+        },
+        "selfEmploymentTax": {
+            "title": "Selbstständigensteuer-Rechner",
+            "description": "Schätzen Sie Selbstständigensteuern für Freiberufler und Auftragnehmer.",
+            "netEarnings": "Netto-Selbstständigeneinkommen",
+            "filingStatus": "Steuerstatus",
+            "otherIncome": "Sonstiges Einkommen (Lohn, etc.)",
+            "seTax": "Selbstständigensteuer",
+            "socialSecurity": "Sozialversicherung",
+            "medicare": "Krankenversicherung",
+            "deduction": "SE-Steuerabzug"
+        },
+        "refinance": {
+            "title": "Umschuldungsrechner",
+            "description": "Sehen Sie, ob eine Umschuldung Ihrer Hypothek Geld sparen könnte.",
+            "currentBalance": "Aktueller Kreditsaldo",
+            "currentRate": "Aktueller Zinssatz",
+            "currentPayment": "Aktuelle monatliche Zahlung",
+            "remainingTerm": "Restlaufzeit (Jahre)",
+            "newRate": "Neuer Zinssatz",
+            "newTerm": "Neue Kreditlaufzeit",
+            "closingCosts": "Abschlusskosten",
+            "newPayment": "Neue monatliche Zahlung",
+            "monthlySavings": "Monatliche Ersparnis",
+            "breakEven": "Break-Even-Punkt",
+            "lifetimeSavings": "Lebenslange Ersparnis"
+        },
+        "rentVsBuy": {
+            "title": "Mieten vs. Kaufen Rechner",
+            "description": "Vergleichen Sie die Kosten von Mieten versus Kaufen eines Hauses.",
+            "homePrice": "Hauspreis",
+            "downPayment": "Anzahlung",
+            "mortgageRate": "Hypothekenzins",
+            "propertyTax": "Grundsteuersatz",
+            "monthlyRent": "Monatliche Miete",
+            "rentIncrease": "Jährliche Mieterhöhung",
+            "yearsToStay": "Geplante Wohndauer (Jahre)",
+            "buyingCost": "Gesamtkosten Kauf",
+            "rentingCost": "Gesamtkosten Miete",
+            "recommendation": "Empfehlung"
+        },
+        "homeAffordability": {
+            "title": "Hausleistbarkeitsrechner",
+            "description": "Finden Sie heraus, wie viel Haus Sie sich basierend auf Ihrem Einkommen leisten können.",
+            "annualIncome": "Jährliches Haushaltseinkommen",
+            "monthlyDebts": "Monatliche Schuldenzahlungen",
+            "downPayment": "Anzahlung",
+            "interestRate": "Zinssatz",
+            "loanTerm": "Kreditlaufzeit",
+            "propertyTax": "Grundsteuersatz",
+            "insurance": "Jährliche Versicherung",
+            "maxHomePrice": "Maximaler Hauspreis",
+            "maxLoanAmount": "Maximaler Kreditbetrag",
+            "monthlyPayment": "Geschätzte monatliche Zahlung"
+        },
+        "socialSecurity": {
+            "title": "Sozialversicherungsschätzer",
+            "description": "Schätzen Sie Ihre Sozialversicherungsleistungen in verschiedenen Altersstufen.",
+            "birthYear": "Geburtsjahr",
+            "currentEarnings": "Aktuelles Jahreseinkommen",
+            "retirementAge": "Geplantes Rentenalter",
+            "earningsHistory": "Jahre Berufserfahrung",
+            "estimatedBenefit": "Geschätzte monatliche Leistung",
+            "fullRetirementAge": "Reguläres Rentenalter",
+            "earlyBenefit": "Leistung mit 62",
+            "delayedBenefit": "Leistung mit 70"
+        },
+        "rothVsTraditional": {
+            "title": "Roth vs. Traditionelle IRA Rechner",
+            "description": "Vergleichen Sie Roth und traditionelle IRA, um die beste Option zu finden.",
+            "annualContribution": "Jährlicher Beitrag",
+            "currentAge": "Aktuelles Alter",
+            "retirementAge": "Rentenalter",
+            "currentTaxRate": "Aktueller Steuersatz",
+            "retirementTaxRate": "Erwarteter Steuersatz im Ruhestand",
+            "expectedReturn": "Erwartete Jahresrendite",
+            "rothValue": "Roth IRA Wert bei Renteneintritt",
+            "traditionalValue": "Traditionelle IRA Wert bei Renteneintritt",
+            "rothAfterTax": "Roth Nach-Steuer-Wert",
+            "traditionalAfterTax": "Traditionelle Nach-Steuer-Wert"
+        },
+        "investmentReturn": {
+            "title": "Anlagerendite-Rechner",
+            "description": "Berechnen Sie ROI und vergleichen Sie verschiedene Anlageszenarien.",
+            "initialInvestment": "Anfangsinvestition",
+            "finalValue": "Endwert",
+            "investmentPeriod": "Anlagezeitraum (Jahre)",
+            "totalReturn": "Gesamtrendite",
+            "annualizedReturn": "Annualisierte Rendite",
+            "roi": "Kapitalrendite (ROI)"
         }
     },
     "results": {
@@ -143,10 +363,24 @@
         "latestArticles": "Neueste Artikel",
         "readMore": "Mehr lesen",
         "minRead": "Min. Lesezeit",
-        "relatedArticles": "Verwandte Artikel"
+        "relatedArticles": "Verwandte Artikel",
+        "categories": {
+            "homeBuying": "Hauskauf",
+            "debtPayoff": "Schuldenabbau",
+            "retirement": "Altersvorsorge",
+            "mortgages": "Hypotheken",
+            "taxes": "Steuern",
+            "savings": "Sparen",
+            "investing": "Investieren"
+        }
     },
     "sources": {
         "title": "Datenquellen & Referenzen",
+        "irs": "Internal Revenue Service (IRS)",
+        "ssa": "Sozialversicherungsanstalt",
+        "bls": "Amt für Arbeitsstatistik",
+        "federalReserve": "Federal Reserve",
+        "treasury": "US-Finanzministerium",
         "lastUpdated": "Zuletzt aktualisiert: {date}"
     },
     "accessibility": {
@@ -154,6 +388,8 @@
         "openMenu": "Menü öffnen",
         "closeMenu": "Menü schließen",
         "toggleTheme": "Design wechseln",
-        "selectLanguage": "Sprache auswählen"
+        "selectLanguage": "Sprache auswählen",
+        "expandSection": "Abschnitt erweitern",
+        "collapseSection": "Abschnitt reduzieren"
     }
 }
