--- a/js/i18n/en.json
+++ b/js/i18n/en.json
@@ -29,6 +29,10 @@
             "downPayment": "Down Payment",
             "interestRate": "Interest Rate (Annual)",
             "loanTerm": "Loan Term",
+            "loanTerm30": "30 years",
+            "loanTerm20": "20 years",
+            "loanTerm15": "15 years",
+            "loanTerm10": "10 years",
             "calculate": "Calculate Payment",
             "monthlyPayment": "Monthly Payment",
             "principalInterest": "Principal & Interest",
@@ -1124,7 +1128,18 @@
         "no": "No",
         "or": "or",
         "and": "and",
-        "calculateArrow": "Calculate →"
+        "calculateArrow": "Calculate →",
+        "loanTerm30": "30 years",
+        "loanTerm20": "20 years",
+        "loanTerm15": "15 years",
+        "loanTerm10": "10 years",
+        "annual": "Annual",
+        "monthly": "Monthly",
+        "biWeekly": "Bi-Weekly",
+        "weekly": "Weekly",
+        "hourly": "Hourly",
+        "daily": "Daily",
+        "quarterly": "Quarterly"
     },
     "validation": {
         "required": "This field is required",
