--- a/js/i18n/hi.json
+++ b/js/i18n/hi.json
@@ -65,7 +65,15 @@
     "maximum": "Maximum",
     "or": "or",
     "and": "and",
-    "calculateArrow": "Calculate →"
+    "calculateArrow": "Calculate →",
+    "loanTerm30": "30 वर्ष",
+    "loanTerm20": "20 साल",
+    "loanTerm15": "15 साल",
+    "loanTerm10": "10 वर्ष",
+    "annual": "वार्षिक",
+    "biWeekly": "द्वि-साप्ताहिक",
+    "hourly": "प्रति घंटा",
+    "quarterly": "त्रैमासिक"
   },
   "nav": {
     "home": "होम",
@@ -254,7 +262,11 @@
       "principal": "Principal",
       "interest": "Interest",
       "balance": "Balance",
-      "desc": "Calculate monthly payments, total interest, and view amortization schedule."
+      "desc": "Calculate monthly payments, total interest, and view amortization schedule.",
+      "loanTerm30": "30 वर्ष",
+      "loanTerm20": "20 साल",
+      "loanTerm15": "15 साल",
+      "loanTerm10": "10 वर्ष"
     },
     "compoundInterest": {
       "title": "Compound Interest Calculator",
