--- a/output/prompts/batch-2026-01-20.md
+++ b/output/prompts/batch-2026-01-20.md
@@ -1,6 +1,6 @@
 # Daily Article Generation Batch
 **Date**: 2026-01-20
-**Articles**: 3
+**Articles**: 5
 
 ---
 
@@ -78,6 +78,50 @@ CNBC's senior personal finance correspondent Sharon Epperson joins Power Lunch t
 
 ### Step 3 Output File
 `output/articles/final-building-a-tax-efficient-portfolio.json`
+
+---
+
+
+## Article 4: Best high-yield savings interest rates today, January 18, 2026 (Earn up to 4% APY)
+
+**Topic**: savings
+**Source**: Yahoo Finance
+**Target Calculator**: Savings Goal Calculator
+**Slug**: best-high-yield-savings-interest-rates-today-january-18-2026
+
+### News Summary
+
+
+### Step 1 Output File
+`output/drafts/draft-best-high-yield-savings-interest-rates-today-january-18-2026.md`
+
+### Step 2 Output File
+`output/drafts/review-best-high-yield-savings-interest-rates-today-january-18-2026.md`
+
+### Step 3 Output File
+`output/articles/final-best-high-yield-savings-interest-rates-today-january-18-2026.json`
+
+---
+
+
+## Article 5: Trump says you should be able to use a 401(k) to buy a home. 2 ways to bolster a down payment without tapping your retirement
+
+**Topic**: retirement
+**Source**: CNBC Top News
+**Target Calculator**: Retirement Calculator
+**Slug**: trump-says-you-should-be-able-to-use-a-401k-to-buy-a-home-2
+
+### News Summary
+Withdrawing from your 401(k) before retirement can come with some downsides. Here are two safer ways to grow your savings for a down payment.
+
+### Step 1 Output File
+`output/drafts/draft-trump-says-you-should-be-able-to-use-a-401k-to-buy-a-home-2.md`
+
+### Step 2 Output File
+`output/drafts/review-trump-says-you-should-be-able-to-use-a-401k-to-buy-a-home-2.md`
+
+### Step 3 Output File
+`output/articles/final-trump-says-you-should-be-able-to-use-a-401k-to-buy-a-home-2.json`
 
 ---
 
