--- a/js/i18n/fr.json
+++ b/js/i18n/fr.json
@@ -461,6 +461,7 @@
       "priceIncrease": "Price Increase",
       "yearByYearBreakdown": "Year-by-Year Breakdown",
       "year": "Year",
+      "yearX": "Year {year}",
       "futureCost": "Future Cost",
       "buyingPowerOf100": "Buying Power of $100",
       "resourcesTitle": "Inflation Resources",
